<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="280dip"
        android:orientation="vertical">

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:scaleType="fitXY"
            android:gravity="fill_horizontal"
            android:src="@drawable/dialog_divider_horizontal_light"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip" />

    <TextView android:id="@+id/lbl_login_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/txt_login_id"
            android:textAppearance="@android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/edit_login_id"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:singleLine="true"
            android:textAppearance="@android:attr/textAppearanceMedium" />

    <TextView android:id="@+id/lbl_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/txt_password"
            android:textAppearance="@android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/edit_password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:password="true"
            android:singleLine="true"
            android:textAppearance="@android:attr/textAppearanceMedium" />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginRight="20dip">

        <Button android:id="@+id/btn_login"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/txt_login" />

        <Button android:id="@+id/btn_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/txt_cancel" />

    </LinearLayout>

    <WebView android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
