<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <ListView android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12px"
            android:layout_weight="1"
            android:transcriptMode="normal" />

    <FrameLayout android:id="@+id/controls_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/controls"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <LinearLayout android:id="@+id/clear_all"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:gravity="center">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_delete" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_clear_all" />

            </LinearLayout>

            <LinearLayout android:id="@+id/share_urls"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="center">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_share" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_share_urls" />

            </LinearLayout>

        </LinearLayout>

        <TextView android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg_no_pin"
                android:visibility="invisible"
                android:textAppearance="?android:attr/textAppearanceSmall" />

    </FrameLayout>

</LinearLayout>
